--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,12 @@
 	<version>1.0-SNAPSHOT</version>
 	
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	    <axon.version>3.1.2</axon.version>
 		<hibernate.version>5.2.12.Final</hibernate.version>
+		<shade.plugin.version>3.1.0</shade.plugin.version>
     </properties>
 
     <dependencies>
@@ -27,5 +29,30 @@
 			<version>${axon.version}</version>
 		</dependency>
     </dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>${shade.plugin.version}</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<transformers>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>io.axoniq.schemagenerator.Application</mainClass>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
