--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 		<shade.plugin.version>3.1.0</shade.plugin.version>
     </properties>
 
+
     <dependencies>
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -27,6 +28,21 @@
 			<groupId>org.axonframework</groupId>
 			<artifactId>axon-core</artifactId>
 			<version>${axon.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>1.5.11.RELEASE</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.hibernate</groupId>
+					<artifactId>hibernate-entitymanager</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>javax.transaction</groupId>
+					<artifactId>javax.transaction-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
     </dependencies>
 
